230822 Router 기본 설정

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,th,td,form,fieldset,legend,input,textarea,button,select{margin:0;padding:0}
+img,fieldset{border:0}
+em,address,i{font-style:normal;}
+a{text-decoration:none;}
+table{border-collapse:collapse;}
+ul li, 
+ol li {
+  list-style:none;
+}
+button {
+  border:none;
+  background:transparent;
+  cursor: pointer;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,5 +23,9 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+.skip-nav {
+  display: none;
 }
