230822 styled components 연습

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,12 @@
 /* App CSS */
 .App {
   &-wrap{
-    display:flex;
+    &.column{
+      display:flex;
+      .main-wrap{
+        flex-grow:1;
+      }
+    }
   }
+  
 }
