--- a/src/assets/components/Header.scss
+++ b/src/assets/components/Header.scss
@@ -1,19 +1,110 @@
 .header {
   position:relative;
   z-index:900;
-  padding:10px 30px;
+  padding:0 30px;
+  box-shadow:0px 0px 10px rgba(0, 0, 0, 0.25);
   &-inner{ 
     display:flex;
+    position:relative;
     justify-content: space-between;
     align-items: center;
   }
   &-logo {
-    padding:10px;
+    overflow:hidden;
+    position:relative;
+    width:70px;
+    height:50px;
+    &::before, &::after {
+      display:block;
+      position:absolute;
+      top:50%;
+      width:35px;
+      height:35px;
+      border-radius:50%;
+      transform:translateY(-50%);
+      box-sizing:border-box;
+      content:"";
+    }
+    &::before {
+      left:20px;
+      background:#fff;
+      border:1px solid #222;
+    }
+    &::after{
+      left:0;
+      background:#222;
+    }
+    .header-title {
+      display:inline-block;
+      position:absolute;
+      z-index:1;
+      top:50%;
+      left:0;
+      width:50px;
+      height:2px;
+      background:#fff;
+      transform: translateY(-50%);
+      &::before{
+        position:absolute;
+        top:50%;
+        left:-50%;
+        width:50%;
+        height:2px;
+        background:#fff;
+        transform: translateY(-50%);
+        content:"";
+      }
+      &::after {
+        position:absolute;
+        top:50%;
+        left:0;
+        width:10%;
+        height:2px;
+        background:red;
+        transform: translateY(-50%);
+        animation: logo_bar 2s ease infinite;
+        content:"";
+      }
+      @keyframes logo_bar {
+        0%{left:-20%}
+        100%{left:50%}
+      }
+      .tit {
+        display:inline-block;
+        position:absolute;
+        z-index:2;
+        top:50%;
+        left:13px;
+        width:50px;
+        padding:2px 3px;
+        border-top-left-radius:4px;
+        border-bottom-left-radius:4px;
+        background:#fff;
+        font-size:14px;
+        font-family:'NanumGothic';
+        box-shadow:4px 2px 2px rgba(0, 0, 0, 0.25);
+        box-sizing:border-box;
+        transform: translateY(-50%);
+        line-height:1;
+        color:#000;
+      }
+      
+    }
   }
   &-nav {
     ul {
       display:flex;
-      gap: 10px;
+      gap: 15px;
+    }
+  }
+  &-link {
+    display:inline-block;
+    padding:15px;
+    color:#000;
+    box-sizing:border-box;
+    cursor:pointer;
+    &.active {
+      font-weight:550;
     }
   }
   &-fix {
@@ -21,13 +112,67 @@
       display: flex;
       gap:10px;
     }
+    .nav-direction {
+      $iconW:2px;
+      .nav-type {
+        display:inline-block;
+        position:relative;
+        width:20px;
+        height:20px;
+        border:1px solid #000;
+        border-radius:4px;
+        box-sizing:border-box;
+        transition: all .3s;
+        cursor:pointer;
+        &::before, &::after {
+          position:absolute;
+          background:#000;
+          content:"";
+        }
+        &::before {
+          top:10%;
+          left:10%;
+          width:80%;
+          height:$iconW;
+        }
+        &::after{
+          top:10%;
+          left:10%;
+          width:$iconW;
+          height:80%;
+        }
+        .txt {
+          display:inline-block;
+          text-indent:-9999px;
+          &::after{
+            position:absolute;
+            top:calc(20% + #{$iconW});
+            left:calc(20% + #{$iconW});
+            width:calc(70% - #{$iconW});
+            height:calc(70% - #{$iconW});
+            border-radius:2px;
+            background:#000;
+            content:"";
+            box-sizing:border-box;
+          }
+        }
+      }
+    }
+    .members {
+      .login {
+        display:inline-block;
+        position:relative;
+        width:20px;
+        height:20px;
+      }
+    }
   }
 }
 .column {
   .header{
-    padding:0;
+    padding:1px 0 0 30px;
     &-inner {
-      flex-direction: column;
+      display:block;
     }
     &-logo{
       position:relative;
@@ -48,7 +193,29 @@
       max-width:1920px;
       padding:0 30px;
       background:#fff;
+      box-shadow:0px 0px 10px rgba(0, 0, 0, 0.25);
       box-sizing:border-box;
+      .fix-lists {
+        & > li > *{
+          padding:15px 0;
+        }
+      }
+      .nav-direction {
+        $iconW:2px;
+        .nav-type {
+          &::after{
+            display:none;
+          }
+          .txt {
+            &::after{
+              top:calc(20% + $iconW);
+              left:10%;
+              width:80%;
+              height:calc(70% - $iconW);
+            }
+          }
+        }
+      }
     }
   }
 }
