--- a/src/assets/components/Header.scss
+++ b/src/assets/components/Header.scss
@@ -124,6 +124,7 @@
         border-radius:4px;
         box-sizing:border-box;
         transition: all .3s;
+        vertical-align: top;
         cursor:pointer;
         &::before, &::after {
           position:absolute;
@@ -144,6 +145,7 @@
         }
         .txt {
           display:inline-block;
+          font-size:0;
           text-indent:-9999px;
           &::after{
             position:absolute;
@@ -171,7 +173,8 @@
 }
 .column {
   .header{
-    padding:1px 0 0 30px;
+    height:auto;
+    padding:0 0 0 30px;
     &-inner {
       display:block;
     }
@@ -191,15 +194,14 @@
       top:0;
       right:0;
       width:100%;
+      height:50px;
       max-width:1920px;
       padding:0 30px;
       background:#fff;
       box-shadow:0px 0px 10px rgba(0, 0, 0, 0.25);
       box-sizing:border-box;
       .fix-lists {
-        & > li > *{
-          padding:15px 0;
-        }
+        align-items: center;
       }
       .nav-direction {
         $iconW:2px;
