230828 공통 : styled title, common 추가 / scss

--- a/src/assets/components/Header.scss
+++ b/src/assets/components/Header.scss
@@ -30,11 +30,11 @@
     &::before {
       left:20px;
       background:#fff;
-      border:1px solid #222;
+      border:1px solid $color2;
     }
     &::after{
       left:0;
-      background:#222;
+      background:$color1;
     }
     .header-title {
       display:inline-block;
@@ -62,7 +62,7 @@
         left:0;
         width:10%;
         height:2px;
-        background:red;
+        background:$color3;
         transform: translateY(-50%);
         animation: logo_bar 2s ease infinite;
         content:"";
@@ -100,12 +100,14 @@
   }
   &-link {
     display:inline-block;
+    min-width:70px;
     padding:15px;
     color:#000;
     box-sizing:border-box;
     cursor:pointer;
     &.active {
-      font-weight:550;
+      font-weight:600;
+      color: $color1;
     }
   }
   &-fix {
