--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -3,7 +3,6 @@
 @import "./mixin.scss";
 :root {
   --font-NanumGithic: 'NanumGothic';
-}
-.tit {
-  color:red;
+  --font-NanumGithicB: 'NanumGothicBold';
+  --font-NanumGithicL: 'NanumGothicLight';
 }
