230904 state 업데이트 및 공통 styled 관리 및 절대경로

--- a/src/assets/components/Record.scss
+++ b/src/assets/components/Record.scss
@@ -1,7 +1,8 @@
 @import "../style/common.scss";
 
 .study {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   padding: 50px;
   border: 1px solid #dbdbdb;
   margin: 50px auto 0;
