--- a/src/assets/components/Record.scss
+++ b/src/assets/components/Record.scss
@@ -6,6 +6,16 @@
   padding: 50px;
   border: 1px solid #dbdbdb;
   margin: 50px auto 0;
+  .box {
+    .desc {
+      margin-top:15px;
+      font-size: 14px;
+      color: $subTextColor;
+    }
+    &-cont { 
+      margin-top:10px;
+    }
+  }
 }
 
 button {
@@ -13,8 +23,5 @@ button {
   border-radius:3px;
   padding:2px;
   cursor:pointer;
-  & + button {
-    margin-left:10px;
-  }
 }
 
