--- a/src/assets/components/Profile.scss
+++ b/src/assets/components/Profile.scss
@@ -4,32 +4,42 @@
   position:relative;
   .visual{
     position:relative;
-    min-height:500px;
-    padding:30px;
-    background:#444;
-    &-box {
+    min-height:300px;
+    padding:100px 30px 30px;
+    &::after {
       position:absolute;
-      top:50%;
-      left:50%;
+      top:0;
+      left:0;
+      width:100%;
+      height:200px;
+      background:$color2;
+      content:"";
+    }
+    &-box {
+      position:relative;
+      z-index:2;
       width:100%;
       max-width:800px;
+      margin:0 auto;
+      border-radius:10px;
       background:#fff;
-      transform: translateX(-50%);
+      box-shadow:0px 0px 10px rgba(0,0,0,.2);
       text-align:center;
     }
     &-info {
       display:flex;
       flex-direction: column;
       padding:75px 30px 30px;
-      .job {
-        order:1;
-        margin-top:10px;
-      }
       .name{
-        order:0;
-        margin-top:25px;
-        font-size:18px;
+        margin-top:30px;
+        font-size:24px;
         font-family: $fontB;
+      }
+      .job {
+        display:inline-block;
+        margin-top:20px;
+        padding-top:20px;
+        border-top:1px solid $lineColor;
       }
     }
     &-img {
@@ -44,6 +54,43 @@
       border-radius:50%;
       transform: translate(-50%, -50%);
       transition: all .5s;
+    }
+  }
+  .contact {
+    margin-top:20px;
+    ul {
+      display:flex;
+      justify-content: center;
+      & > li {
+        position:relative;
+        margin-left:10px;
+        padding-left:10px;
+        &::before {
+          position:absolute;
+          top:50%;
+          left:0;
+          width:1px;
+          height:80%;
+          background:$blackColor;
+          transform:translateY(-50%);
+          content:"";
+        }
+        &:first-child {
+          &::before{
+            display:none;
+          }
+        }
+      }
+    }
+    .txt {
+      display:flex;
+      align-items: center;
+      position:relative;
+      font-size:14px;
+      color:$blackColor;
+      & > i {
+        margin-right:5px;
+      }
     }
   }
 }
