--- a/src/assets/scss/components/Record.scss
+++ b/src/assets/scss/components/Record.scss
@@ -14,6 +14,12 @@
     }
     &-cont { 
       margin-top:10px;
+      p {
+        font-size:14px;
+        & + p {
+          margin-top:5px;
+        }
+      }
     }
   }
 }
