--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -113,13 +113,32 @@
       padding:10px;
       border-radius:5px;
       .desc {
+        margin-top:10px;
         p {
+          position:relative;
+          padding-left:8px;
           font-size:14px;
+          line-height:18px;
           color:$textColor;
+          & + p {
+            margin-top:5px;
+          }
+          &::after {
+            position:absolute;
+            top:6px;
+            left:2px;
+            width:2px;
+            height:2px;
+            border-radius:50%;
+            background:$color1;
+            content:"";
+          }
         }
       }
     }
-
+    .porgress {
+      margin-top:10px;
+    }
   }
 }
 
