--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -1,19 +1,11 @@
 @import "assets/scss/common.scss";
 
-$iconW:2px;
 
 .header {
   position:relative;
   z-index:900;
   padding:0 30px;
   box-shadow:0px 0px 10px rgba(0, 0, 0, 0.25);
-  &-inner{ 
-    display:flex;
-    position:relative;
-    justify-content: space-between;
-    align-items: center;
-    gap:50px;
-  }
   &-logo {
     overflow:hidden;
     position:relative;
@@ -93,16 +85,8 @@ $iconW:2px;
       
     }
   }
-  &-nav {
-    flex-grow:1;
-    ul {
-      display:flex;
-      gap: 15px;
-    }
-  }
   &-link {
     display:inline-block;
-    min-width:70px;
     padding:15px;
     color:#000;
     cursor:pointer;
@@ -112,6 +96,7 @@ $iconW:2px;
     }
   }
   &-fix {
+    $iconW:2px;
     ul {
       display: flex;
       gap:10px;
@@ -217,6 +202,55 @@ $iconW:2px;
           }
         }
       }
+    }
+  }
+}
+@include pc {
+  .header {
+    &-inner{ 
+      display:flex;
+      justify-content: space-between;
+      align-items: center;
+      gap:50px;
+    }
+    &-nav {
+      flex-grow:1;
+      ul {
+        display:flex;
+        gap: 15px;
+      }
+    }
+    &-link {
+      min-width:70px;
+    }
+  }
+}
+@include mo {
+  .header {
+    &-nav {
+      display:none;
+      position:fixed;
+      z-index:999;
+      top:50px;
+      left:0;
+      width:90%;
+      height:100%;
+      background:$whiteColor;
+      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+      animation: menuOpen 1s both;
+      @keyframes menuOpen {
+        0%{
+          left:-110%;
+        }
+        100%{
+          left:0;
+        }
+      }
+    }
+    &-link {
+      display:block;
+      padding:15px;
+      border-top:1px solid $lineColor;
     }
   }
 }
