--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -95,7 +95,7 @@
   }
 
   .skils {
-    $gap: 10px;
+    $gap: 20px;
     &__inner {
       padding:0 30px;
     }
@@ -141,10 +141,53 @@
     }
   }
 }
-
 @include pc {
   
+
 }
 @include mo {
-  
+  .profile {
+    
+    .skils {
+      $gap: 10px;
+      &__lists {
+        gap: $gap;
+        &-item {
+          width: calc((100% - #{$gap})/ 2);
+        }
+      }
+      &__box {
+        width:100%;
+        height:100%;
+        padding:10px;
+        border-radius:5px;
+        .desc {
+          margin-top:10px;
+          p {
+            position:relative;
+            padding-left:8px;
+            font-size:14px;
+            line-height:18px;
+            color:$textColor;
+            & + p {
+              margin-top:5px;
+            }
+            &::after {
+              position:absolute;
+              top:6px;
+              left:2px;
+              width:2px;
+              height:2px;
+              border-radius:50%;
+              background:$color1;
+              content:"";
+            }
+          }
+        }
+      }
+      .porgress {
+        margin-top:10px;
+      }
+    }
+  }
 }
