--- a/src/assets/scss/var.scss
+++ b/src/assets/scss/var.scss
@@ -1,10 +1,11 @@
 // styled component Variable 동일하게.
 
 // Break Point (Desktop First 기준 내림차순 설정)
-$maxPc	: 1920px;
-$pc : 1440px;
-$table	: 1080px;
-$mo		: 768px;
+$maxPc: 1920px;
+$pc: 1440px;
+$table: 1080px;
+$mo: 768px;
+$onlyMo: 450px;
 
 // Color 
 $whiteColor: #fff;
