header 수정 및 isMo 체크

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 /* App CSS */
 .App {
   &-wrap{
+    &.fixed { 
+      .container {
+        margin-top:50px;
+      }
+    }
     &.column{
       display:flex;
       .main-wrap{
