--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -238,34 +238,58 @@
     padding: 0 15px;
     &__nav {
       &-menu{
+        display:none;
         position:fixed;
         z-index:999;
         top:50px;
         left:0;
-        width:90%;
+        width:100%;
         height:100%;
         background:$whiteColor;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
-        animation: menuOff .3s both;
-        @keyframes menuOff {
-          0%{
-            opacity:1;
-          }
-          100%{
-            opacity:0;
-            display:none;
-          }
-        }
       }
       &-btn {
         display:block;
+        overflow:hidden;
         position:absolute;
         top:50%; 
         right:15px;
-        width:30px;
-        height:30px;
+        width:20px;
+        height:16px;
+        border:none;
+        border-radius:0;
         text-indent:-9999px;
         transform:translateY(-50%);
+        
+        &::after {
+          position:absolute;
+          top:50%;
+          left:50%;
+          width:100%;
+          height:2px;
+          background:$blackColor;
+          transform: translate(-50%, -50%);
+          transition:all .3s;
+          content:"";
+        }
+        & > span {
+          &::before, &::after {
+            position:absolute;
+            top:0px;
+            left:50%;
+            width: 100%;
+            height:2px;
+            background: $blackColor;
+            transform: translateX(-50%);
+            transition:all .3s;
+            content:"";
+          }
+          &::after{ 
+            top:auto;
+            bottom:0px;
+            transform: translateX(-50%);
+          }
+        }
       }
     }
     &-link {
@@ -274,7 +298,10 @@
       border-top:1px solid $lineColor;
     }
     &.open {
+      position:fixed;
+      top:0;
       width:100%;
+      background:$whiteColor;
       .header__nav-menu {
         display:block;
         animation: menuOpen .3s both;
@@ -284,6 +311,24 @@
           }
           100%{
             left:0;
+          }
+        }
+      }
+      .header__nav-btn {
+        &::after { 
+          left:105%;
+          background:$color1;
+          transform:translateX(0);
+        }
+        & > span {
+          &::before, &::after { 
+            top:50%;
+            left:50%;
+            background:$color1;
+            transform: translate(-50%,-50%) rotate(45deg);
+          }
+          &::after {
+            transform: translate(-50%,-50%) rotate(-45deg);
           }
         }
       }
