App -> MainTemplate 이관 및 header 수정

--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -252,15 +252,15 @@
         display:block;
         overflow:hidden;
         position:absolute;
+        z-index:10;
         top:50%; 
         right:15px;
-        width:20px;
-        height:16px;
+        width:30px;
+        height:20px;
         border:none;
         border-radius:0;
         text-indent:-9999px;
         transform:translateY(-50%);
-        
         &::after {
           position:absolute;
           top:50%;
