--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -297,41 +297,44 @@
       padding:15px;
       border-top:1px solid $lineColor;
     }
-    &.open {
+    &.fixed {
       position:fixed;
       top:0;
       width:100%;
       background:$whiteColor;
-      .header__nav-menu {
-        display:block;
-        animation: menuOpen .3s both;
-        @keyframes menuOpen {
-          0%{
-            left:-110%;
-          }
-          100%{
-            left:0;
+      .open {
+        .header__nav-menu {
+          display:block;
+          animation: menuOpen .3s both;
+          @keyframes menuOpen {
+            0%{
+              left:-110%;
+            }
+            100%{
+              left:0;
+            }
           }
         }
-      }
-      .header__nav-btn {
-        &::after { 
-          left:105%;
-          background:$color1;
-          transform:translateX(0);
-        }
-        & > span {
-          &::before, &::after { 
-            top:50%;
-            left:50%;
+        .header__nav-btn {
+          &::after { 
+            left:105%;
             background:$color1;
-            transform: translate(-50%,-50%) rotate(45deg);
+            transform:translateX(0);
           }
-          &::after {
-            transform: translate(-50%,-50%) rotate(-45deg);
+          & > span {
+            &::before, &::after { 
+              top:50%;
+              left:50%;
+              background:$color1;
+              transform: translate(-50%,-50%) rotate(45deg);
+            }
+            &::after {
+              transform: translate(-50%,-50%) rotate(-45deg);
+            }
           }
         }
       }
+      
     }
   }
 }
