--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,4 @@
 /* App CSS */
 .App {
-  &-wrap{
-    &.fixed { 
-      .container {
-        margin-top:50px;
-      }
-    }
-    &.column{
-      display:flex;
-      .main-wrap{
-        flex-grow:1;
-      }
-      .header + div {
-        flex-grow:1;
-      }
-    }
-    .container {
-      min-height:200px;
-      padding-bottom:50px;
-    }
-  }
+  position:relative;
 }
