Header on/off 및 스크롤 막기 해제 수정

--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -305,15 +305,15 @@
       .open {
         .header__nav-menu {
           display:block;
-          animation: menuOpen .3s both;
-          @keyframes menuOpen {
-            0%{
-              left:-110%;
-            }
-            100%{
-              left:0;
-            }
-          }
+          // animation: menuOpen .3s both;
+          // @keyframes menuOpen {
+          //   0%{
+          //     left:-110%;
+          //   }
+          //   100%{
+          //     left:0;
+          //   }
+          // }
         }
         .header__nav-btn {
           &::after { 
