redux : store 생성 및 전체 문제 발견

--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -160,6 +160,12 @@
       }
     }
   }
+  &.fixed {
+    position:fixed;
+    top:0;
+    width:100%;
+    background:$whiteColor;
+  }
 }
 .column {
   .header{
@@ -298,10 +304,6 @@
       border-top:1px solid $lineColor;
     }
     &.fixed {
-      position:fixed;
-      top:0;
-      width:100%;
-      background:$whiteColor;
       .open {
         .header__nav-menu {
           display:block;
