profile css 및 내용 수정

--- a/src/assets/scss/var.scss
+++ b/src/assets/scss/var.scss
@@ -17,6 +17,9 @@ $color2:#f5b800;
 $color3:#685ef8;
 $color4:#e76647;
 
+// bg Color 
+$bgColor1: #113536;
+
 // Text Color
 $textColor : #191f28;
 $subTextColor: #868686;
