--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -2,12 +2,11 @@
 
 .profile {
   $gap: 20px;
-
   position:relative;
   .visual{
     position:relative;
     min-height:300px;
-    padding:100px 30px 30px;
+    padding:100px 30px 80px;
     &::after {
       position:absolute;
       top:0;
@@ -95,6 +94,9 @@
       }
     }
   }
+  .section {
+    padding: 30px 0;
+  }
   &__box { 
     padding:0 30px;
   }
@@ -140,7 +142,68 @@
       margin-top:10px;
     }
   }
-  .portfolio{
+  .plan {
+    &__info { 
+      width: 50%;
+      padding:0 20px;
+    }
+    .tit {
+      font-size:18px;
+      font-family:$fontB;
+      text-align:center;
+      & > span {
+        display:inline-block;
+        position:relative;
+        &::before {
+          position:absolute;
+          right:0;
+          bottom:0;
+          width:30%;
+          height:2px;
+          background:$color2;
+          content:"";
+        }
+        &::after{
+          position:absolute;
+          left:0;
+          bottom:0;
+          width:70%;
+          height:2px;
+          background:$color1;
+          content:"";
+        }
+      }
+    }
+    .txt {
+      font-size:14px;
+      color:$subTextColor;
+    }
+    .lists {
+      margin-top:15px;
+      padding-top:15px;
+      border-top:1px solid $lineColor;
+      & > li {
+        position:relative;
+        margin-top:8px;
+        &:first-child {
+          margin-top:0;
+        }
+      }
+      .square {
+        padding-left:10px;
+        &::after{
+          position:absolute;
+          top:5px;
+          left:0;
+          width:3px;
+          height:3px;
+          background:$subTextColor;
+          content:"";
+        }
+      }
+    }
+  }
+  .project{
     &__lists {
       display: flex;
       flex-wrap:wrap;
@@ -207,14 +270,25 @@
       }
     }
   }
-  .thank{
-    margin-top:100px;
-  }
 }
 
 @include mo {
   .profile { 
     $gap: 10px;
+    .visual{
+      padding:100px 30px 50px;
+      &-info {
+        padding:75px 15px 30px;
+        .name{
+          margin-top:20px;
+          font-size:22px;
+        }
+        .job {
+          margin-top:15px;
+          padding-top:15px;
+        }
+      }
+    }
     .contact {
       margin-top:20px;
       & > ul {
@@ -279,7 +353,7 @@
         margin-top:10px;
       }
     }
-    .portfolio{
+    .project{
       &__lists {
         &-item{
           width: 100%;
