프로필 내용 기입

--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -121,7 +121,7 @@
           position:relative;
           padding-left:8px;
           font-size:14px;
-          line-height:18px;
+          line-height:19px;
           color:$textColor;
           & + p {
             margin-top:5px;
@@ -160,8 +160,20 @@
         font-size:18px;
         font-family: $fontB;
       }
-      .txt {
+      .company {
+        margin-top:15px;
         color:$textColor;
+      }
+      .desc {
+        color:$textColor;
+        line-height:21px;
+      }
+      .skils {
+        margin-top:10px;
+        .txt {
+          font-size:14px;
+          color:$subTextColor;
+        }
       }
       .date{
         display:flex;
@@ -170,7 +182,6 @@
         color:$subTextColor;
         .start{
           position:relative;
-          margin-right:10px;
           padding-right:20px;
           &::after {
             position:absolute;
@@ -180,7 +191,7 @@
             height:15px;
             transform: translateY(-50%);
             line-height:1;
-            content:"➡️"
+            content:"~"
           }
         }
       }
@@ -207,6 +218,12 @@
       .review {
         margin-top:10px;
         color:$textColor;
+      }
+      .lists {
+        & > li {
+          font-size:14px;
+          line-height:19px;
+        }
       }
     }
   }
@@ -246,31 +263,30 @@
       font-size:14px;
       color:$textColor;
     }
-    .lists {
-      margin-top:15px;
-      padding-top:15px;
-      border-top:1px solid $lineColor;
-      & > li {
-        position:relative;
-        margin-top:8px;
-        &:first-child {
-          margin-top:0;
-        }
+    
+  }
+  .lists {
+    & > li {
+      position:relative;
+      margin-top:8px;
+      &:first-child {
+        margin-top:0;
       }
-      .square {
-        padding-left:10px;
-        &::after{
-          position:absolute;
-          top:5px;
-          left:0;
-          width:3px;
-          height:3px;
-          background:$textColor;
-          content:"";
-        }
+    }
+    .square {
+      padding-left:10px;
+      &::after{
+        position:absolute;
+        top:5px;
+        left:0;
+        width:3px;
+        height:3px;
+        background:$textColor;
+        content:"";
       }
     }
   }
+
 }
 
 @include mo {
@@ -326,29 +342,6 @@
         height:100%;
         padding:10px;
         border-radius:5px;
-        .desc {
-          margin-top:10px;
-          p {
-            position:relative;
-            padding-left:8px;
-            font-size:14px;
-            line-height:18px;
-            color:$textColor;
-            & + p {
-              margin-top:5px;
-            }
-            &::after {
-              position:absolute;
-              top:6px;
-              left:2px;
-              width:2px;
-              height:2px;
-              border-radius:50%;
-              background:$color1;
-              content:"";
-            }
-          }
-        }
       }
       .porgress {
         margin-top:10px;
