--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -50,11 +50,16 @@
       left:50%;
       width:150px;
       height:150px;
-      background:#fff;
+      background:url("../../images/profile.jpg") no-repeat 0 0;
+      background-size:cover;
       box-shadow: 0px 2px 5px rgba(0,0,0,.25);
       border-radius:50%;
       transform: translate(-50%, -50%);
       transition: all .5s;
+      img {
+        width:100%;
+
+      }
     }
   }
   .contact {
