Header hover, 공통 상단 배너 Record 내용 수정

--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -92,11 +92,17 @@
   &-link {
     display:inline-block;
     padding:15px;
+    transition:$transitionB;
     color:#000;
     cursor:pointer;
     &.active {
-      font-weight:600;
       color: $color1;
+      &:focus {
+        color: $color1;
+      }
+    }
+    &:hover, &:focus {
+      color: $color2;
     }
   }
   &__fix {
