공통 css 수정 및 state3 마무리 글 생성

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,9 +4,24 @@
   --font-NanumGithicB: 'NanumGothicBold';
   --font-NanumGithicL: 'NanumGothicLight';
 }
+.blind {
+  position:absolute;
+  top:-99999px;
+  left:-9999px;
+  opacity:0;
+  text-indent:-9999px;
+}
+
 .skip-nav {
   display: none;
 }
-body {
-  font-size:16px;
+button {
+  border:none;
+  background:transparent;
+  cursor: pointer;
+  color: $textColor;
+}
+a{
+  color: $textColor;
+  text-decoration:none;
 }
