--- a/src/assets/scss/components/Record.scss
+++ b/src/assets/scss/components/Record.scss
@@ -32,8 +32,12 @@
         margin-top:20px;
       }
       &__lists {
+        $beforeW:30px;
         &-item {
-          $beforeW:30px;
+          margin-top:15px;
+          &:first-child {
+            margin-top:0;
+          }
           .btn {
             display:grid;
             gap : 5px;
@@ -48,6 +52,7 @@
             border:1px solid $lineColor;
             border-radius:5px;
             text-align:left;
+            box-shadow: 1px 2px 1px rgba(0,0,0,.1);
             &::after {
               position:absolute;
               z-index:-1;
