css 폰트 수정 및 Title 컴포넌트 경로, 불필요한 파일 삭제

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,6 +4,7 @@
   --font-NanumGithicB: 'NanumGothicBold';
   --font-NanumGithicL: 'NanumGothicLight';
 }
+body { font-family:"NanumGothic", sans-serif; }
 .blind {
   position:absolute;
   top:-99999px;
@@ -11,7 +12,6 @@
   opacity:0;
   text-indent:-9999px;
 }
-
 .skip-nav {
   display: none;
 }
