Record 목록 선택된 리스트만 나오게 수정

--- a/src/assets/scss/components/Record.scss
+++ b/src/assets/scss/components/Record.scss
@@ -106,6 +106,9 @@
       margin-top:15px;
       font-size: 14px;
       color: $subTextColor;
+      & + .desc {
+        margin-top:8px;
+      }
     }
     &__cont { 
       margin-top:10px;
@@ -122,6 +125,10 @@
         font-weight:600;
       }
     }
+  }
+  .button {
+    padding:5px;
+    border:1px solid $lineColor;
   }
 }
 
