guide Color 틀 수정 중

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,14 +3,14 @@
 // Break Point (Desktop First 기준 내림차순 설정)
 $maxPc: 1920px;
 $pc: 1440px;
-$table: 1080px;
+$table: 1140px;
 $mo: 768px;
 $onlyMo: 450px;
 
 // Color 
 $whiteColor: #fff;
 $blackColor: #000;
-
+$subBlack: #222222;
 // Point Color
 $color1:#3cb062;
 $color2:#f5b800;
@@ -19,6 +19,7 @@ $color4:#e76647;
 
 // bg Color 
 $bgColor1: #113536;
+$titBgColor: #f8f9fc;
 
 // Text Color
 $textColor : #191f28;
