id 값 random 지정(이름 추가 가능)

--- a/src/assets/scss/components/Guide.scss
+++ b/src/assets/scss/components/Guide.scss
@@ -36,9 +36,9 @@
       border:1px solid $lineColor;
       transition:$transitionB;
       &:hover, &:focus { 
-        border-color:$color2;
-        background:$color2;
-        color:$subBlack;
+        border-color:$color1;
+        background:$color1;
+        color:$whiteColor;
       }
     }
   }
