--- a/src/assets/scss/components/Guide.scss
+++ b/src/assets/scss/components/Guide.scss
@@ -79,7 +79,7 @@
       &__lists {
         gap:$gap;
         &-item {
-          width:calc((100% - #{$gap*2}) / 3);
+          width:calc((100% - #{$gap * 2}) / 3);
         }
       }
     }
@@ -112,7 +112,7 @@
       &__lists {
         gap:$gap;
         &-item {
-          width:calc((100% - $gap) / 2);
+          width:100%
         }
       }
     }
@@ -120,7 +120,7 @@
       &__lists {
         gap:$gap;
         &-item {
-          width:calc((100% - $gap) / 2);
+          width:calc((100% - #{$gap}) / 2);
         }
       }
       &__info {
