--- a/src/assets/scss/components/Profile.scss
+++ b/src/assets/scss/components/Profile.scss
@@ -231,6 +231,17 @@
         }
       }
     }
+    .comma {
+      display:inline-block;
+      &::before {
+        content:",";
+      }
+      &:first-child {
+        &::before {
+          display:none;
+        }
+      }
+    }
   }
   .plan {
     &__info { 
