--- a/src/assets/scss/components/Guide.scss
+++ b/src/assets/scss/components/Guide.scss
@@ -27,21 +27,6 @@
       margin-top:10px;
     }
   }
-  .font {
-    &__lists {
-      gap:20px;
-    }
-    .btn {
-      padding:5px 10px;
-      border:1px solid $lineColor;
-      transition:$transitionB;
-      &:hover, &:focus { 
-        border-color:$color1;
-        background:$color1;
-        color:$whiteColor;
-      }
-    }
-  }
   .color {
     &__lists {
       gap:20px;
@@ -70,19 +55,65 @@
       font-weight:600;
     }
   }
+  .breakpoint{
+    .screen{
+      margin:10px;
+      text-align:center;
+      &-line{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 60px;
+        height: 60px;
+        border-left: 1px solid #b4b4b4;
+        border-right: 1px solid #b4b4b4;
+        text-align: center;
+        &::before {
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 0;
+          width: 100%;
+          height: 1px;
+          background: #262626;
+          transform: translateY(-50%);
+          content: "";
+        }
+      }
+      .value {
+        position:relative;
+        z-index:1;
+        background: rgba(255,255,255,0.8);
+      }
+      .tit{ 
+        display:block;
+        margin-top:5px;
+        font-size:14px;
+      }
+    }
+  }
+  .font {
+    &__lists {
+      gap:20px;
+    }
+    .btn {
+      padding:5px 10px;
+      border:1px solid $lineColor;
+      transition:$transitionB;
+      &:hover, &:focus { 
+        border-color:$color1;
+        background:$color1;
+        color:$whiteColor;
+      }
+    }
+  }
+  
 }
 
 @include mo {
   .guide {
     $gap:15px;
-    .font {
-      &__lists {
-        gap:$gap;
-        &-item {
-          width:calc((100% - #{$gap * 2}) / 3);
-        }
-      }
-    }
     .color {
       &__lists {
         gap:$gap;
@@ -102,20 +133,21 @@
         font-weight:600;
       }
     }
+    .font {
+      &__lists {
+        gap:$gap;
+        &-item {
+          width:calc((100% - #{$gap * 2}) / 3);
+        }
+      }
+    }
+    
   }
 }
 
 @include onlyMo {
   .guide {
     $gap:10px;
-    .font {
-      &__lists {
-        gap:$gap;
-        &-item {
-          width:100%
-        }
-      }
-    }
     .color {
       &__lists {
         gap:$gap;
@@ -134,5 +166,14 @@
         font-weight:600;
       }
     }
+    .font {
+      &__lists {
+        gap:$gap;
+        &-item {
+          width:100%
+        }
+      }
+    }
+    
   }
 }
